--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Code For New Orleans Static Site
-email: 
-description: > # this means to ignore newlines until "baseurl:"
-  Code for new orleans is.....
+title: Code For New Orleans
+email:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://codeforneworleans.org" # the base hostname & protocol for your site
 
